cleaning of concepts + bug fixes on tabs (missing image placeholders)

--- a/concepts/skale-chain/introduction.mdx
+++ b/concepts/skale-chain/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SKALE Chains 101"
+title: "Introduction"
 description: "What makes a SKALE Chain a gas-free, instant-finality L1"
 ---
 
