--- a/developers/solidity-quickstart.mdx
+++ b/developers/solidity-quickstart.mdx
@@ -12,7 +12,7 @@ building on SKALE, head over to the [SKALE Discord](https://discord.gg/skale) fo
 2. Deploying a smart contract
 3. Testing the smart contract
 
-### Preqrequisites
+### Prerequisites
 
 <Steps>
 1. ### Prepare Dev Environemnt
